fix error msg spacing

--- a/sign-up-form/css/style.css
+++ b/sign-up-form/css/style.css
@@ -18,7 +18,7 @@
 }
 
 .item {
-	margin: auto 20px 10px var(--left-margin);
+	margin: 1px 20px 10px var(--left-margin);
 /* 	height: 33%;
  */}
 
